# aa-mandatory1

./: .gitignore  .pre-commit-config.yaml  README.md  haircut_cleanup.xlsx  pyproject.toml
report/: example.tex
src/: example.ipynb  example.py  haircut_cleanup.ipynb  haircut_cleanup.py  haircut_plots.ipynb  haircut_plots.py
