[tool.poetry]
name = "aa-mandatory1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"
matplotlib = "^3.5.1"
numpy = "^1.22.2"
ipykernel = "^6.9.1"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
